# Analysis

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
Configs/: Configs.txt  FP_Time.cal  GraphsEnabled.txt  Runs.txt
Configs/Calibrations/: TY_MG11.cal  TY_MG7.cal
Configs/Cuts/: DE_E_cuts.cxx  E_TOF_cuts.cxx  MQ_Q_cuts.C  MQ_Q_cuts.cxx  MUGAST.root  MUGAST_tmp.root  VAMOS.root
Configs/ELossTables/: Alpha_in_Helium500Torr.txt  Ar46_in_Al.txt  Ar46_in_Havar.txt  Ar46_in_Helium.txt  Ar46_in_Helium500Torr.txt  Ar46_in_Ice.txt  Argon_in_Helium.txt  Argon_in_ice.txt  Deuteron_in_Havar.txt  Deuteron_in_Helium.txt  Deuteron_in_Helium500Torr.txt  Deuteron_in_ice.txt  H1_in_Al.txt  H1_in_Helium.txt  H2_in_Al.txt  H2_in_Helium.txt  H2_in_Ice.txt  H3_in_Al.txt  H3_in_Havar.txt  H3_in_Helium.txt  H3_in_Ice.txt  He3_in_Al.txt  He3_in_Havar.txt  He3_in_Helium.txt  He3_in_Helium500Torr.txt  He3_in_Ice.txt  He4_in_Al.txt  He4_in_Havar.txt  He4_in_Helium.txt  He4_in_Ice.txt  K47_in_Al.txt  K47_in_Havar.txt  K47_in_Helium.txt  K47_in_Helium500Torr.txt  K47_in_Ice.txt  Proton_in_Havar.txt  Proton_in_Helium500Torr.txt  Proton_in_Ice.txt
Configs/Interpolations/: E_TOF_CURVE.cxx  EntranceAngleHavar.txt  Entrance_angle_5000mbar.txt  Entrance_angle_500Torr.txt  Entrance_angle_7000000mbar.txt  Entrance_angle_700mbar.txt  GasThickness.txt  He_thickness_5000mbar.txt  He_thickness_5000mbar_euc.txt  He_thickness_500Torr.txt  He_thickness_500Torr_cartesian.txt  He_thickness_7000000mbar.txt  He_thickness_7000000mbar_euc.txt  He_thickness_700mbar.txt  He_thickness_700mbar_euc.txt  He_thickness_derivative_5000mbar_euc.txt  He_thickness_derivative_7000000mbar_euc.txt  He_thickness_derivative_700mbar_euc.txt  InterpolationTimeFP.root  TW_Brho_M46_Z18.C  target_thickness.nb
Core/inc/: Main.h
Core/src/: CMakeLists.txt  Main.cxx
Lib/: CMakeLists.txt
Lib/inc/: AgataData.h  AgataDataLinkDef.h  AgataProcessing.h  AgataProcessingLinkDef.h  Analysis.h  AnalysisLinkDef.h  Calibration.h  CalibrationLinkDef.h  CatsData.h  CatsDataLinkDef.h  DiaGraph.h  EnergyLoss.h  EnergyLossLinkDef.h  Fitter.h  Identification.h  IdentificationLinkDef.h  Interpolation.h  InterpolationLinkDef.h  LevelScheme.h  Minimizer.h  MinimizerLinkDef.h  MugastData.h  MugastDataLinkDef.h  MugastIdentification.h  MugastIdentificationLinkDef.h  Must2Data.h  Must2DataLinkDef.h  ReactionFragment.h  ReactionFragmentLinkDef.h  ReactionReconstruction.h  ReactionReconstructionLinkDef.h  Selector.h  SelectorLinkDef.h  Units.h  VamosData.h  VamosDataLinkDef.h  VamosIdentification.h  VamosIdentificationLinkDef.h
Lib/src/: AgataData.cxx  AgataProcessing.cxx  Analysis.cxx  CMakeLists.txt  Calibration.cxx  CatsData.cxx  DiaGraph.cxx  ELossEstimate.cxx  EnergyLoss.cxx  Fitter.cxx  Identification.cxx  Interpolation.cxx  LevelScheme.cxx  Minimizer.cxx  MugastData.cxx  MugastIdentification.cxx  Must2Data.cxx  ReactionFragment.cxx  ReactionReconstruction.cxx  Selector.cxx  VamosData.cxx  VamosIdentification.cxx
Utilities/: Cali.C  He_thickness_500Torr.txt  Minimizer.C  Minimizer.h  NormalizeHistograms.cxx  PlotKinematicLines.C  StripUptime.cxx  disabled_strips.txt  runall.py  target_thickness.nb  thickness_eucl.txt
Utilities/AgataEfficiency/: CMakeLists.txt  DiaGraph.h  GlobalsLinkDef.h  LevelScheme.cxx  LevelScheme.h  Plotter.h  RunSelector.cxx  RunSelector.h  RunSelectorLinkDef.h  Selector.cxx  Selector.h  SpectrumAnalyzer.cxx  SpectrumAnalyzer.h  Units.h  adoptedLevels152Sm.csv  effanalysis  intensity152Eu.txt  main.cxx
Utilities/AgataEfficiency/src/: CMakeLists.txt  Fitter.cxx  Fitter.h  FitterLinkDef.h  Globals.h  Plotter.h  PlotterLinkDef.h  Selector.cxx  Selector.h  SpectrumAnalyzer.cxx  SpectrumAnalyzer.h  SpectrumAnalyzerLinkDef.h  main.cxx
Utilities/AgataEfficiency/src/files/: CheckGeom.C  adoptedLevels152Sm_withalpha.csv  fitparams_absolutex_spectra_Tree_run99.txt  fitparams_absolutey_spectra_Tree_run99.txt  fitparams_relative_spectra_Tree_run99.txt  fitparams_relative_spectra_simu.txt
Utilities/AgataSimulationAnalysis/: Graph.h
Utilities/AngularDistribution/: disabled_strips.txt
Utilities/GammaAnalysis/: GammaAnalysis.C
Utilities/Graphs/: PlotIcVsIc.C  e-tof.nb  kinematiclines.C  kinematics.nb
Utilities/KinematicLinesPlotter/: CMakeLists.txt
Utilities/KinematicLinesPlotter/src/: CMakeLists.txt  Plotter.cxx  Plotter.h  main.cxx
Utilities/MaxLikelihood/: AverageDistributions.C  CreateSimulationFile.C  MaxLikelyhood.C  PlotCM.C  PlotResults.C  l0_averaged.txt  l2_averaged.txt  l3_averaged.txt  xsec_d32.txt  xsec_f72.txt  xsec_s12.txt
Utilities/Other/: PlotKinematicLines.C  Temperature_Density.C  VamosDetectors_FINAL.lpp  integrals_of_peaks.nb
Utilities/Reactions/: 46Ar_3He_d.in  GenerateOverlaps.C  global_potentials.xlsx  global_potentials_48Ca.xlsx  rundifferentenergies.py
Utilities/SimulationAnalysis/: CMakeLists.txt  RunSelector.cxx  Selector.cxx  Selector.h  build.py  main.cxx
Utilities/SimulationAnalysis/Agata/: CMakeLists.txt  Hit.h  HitLinkDef.h  Particle.h  ParticleLinkDef.h  Readsimu.h  RunSelector.cxx  Selector.cxx  Selector.h  loader.C  main.cxx  readsimu.C  simulationanalysis  simulationanalysis.cbp
Utilities/SimulationAnalysis/Agata/Configs/: efficiencies.txt
Utilities/SimulationAnalysis/Agata/src/: CMakeLists.txt  Hit.h  HitLinkDef.h  Particle.h  ParticleLinkDef.h  Readsimu.h  ReadsimuLinkDef.h  RunSelector.cxx  RunSelector.h  RunSelectorLinkDef.h  Selector.cxx  Selector.h  SelectorLinkDef.h  main.cxx  mainLinkDef.h
Utilities/SimulationAnalysis/Mugast/: CMakeLists.txt  RunSelector.cxx  RunSelector.h  RunSelectorLinkDef.h  Selector.cxx  Selector.h  SelectorData.cxx  SelectorData.h  SelectorDataLinkDef.h  SelectorLinkDef.h  main.cxx  outMappingDataToSimulation.txt  outMissingStrips.txt
Utilities/SimulationAnalysis/configs/: mugast.detector
Utilities/Tester/: CMakeLists.txt  ReactionFragment.cxx  ReactionFragment.h  ReactionFragmentLinkDef.h  ReactionReconstruction.cxx  ReactionReconstruction.h  ReactionReconstructionLinkDef.h  Tester  Tester.cpp  Units.h  compiletester.sh
(+714 files in other folders)
