add_subdirectory(src)

#Adding root dictionaries to the binary folder
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/libInterpolation_rdict.pcm ${CMAKE_CURRENT_BINARY_DIR}/src/libInterpolation.rootmap DESTINATION ${LIBRARY_OUTPUT_PATH})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/libFitter_rdict.pcm ${CMAKE_CURRENT_BINARY_DIR}/src/libFitter.rootmap DESTINATION ${LIBRARY_OUTPUT_PATH})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/libEnergyLoss_rdict.pcm ${CMAKE_CURRENT_BINARY_DIR}/src/libEnergyLoss.rootmap DESTINATION ${LIBRARY_OUTPUT_PATH})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/libMinimizer_rdict.pcm ${CMAKE_CURRENT_BINARY_DIR}/src/libMinimizer.rootmap DESTINATION ${LIBRARY_OUTPUT_PATH})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/libReactionFragment_rdict.pcm ${CMAKE_CURRENT_BINARY_DIR}/src/libReactionFragment.rootmap DESTINATION ${LIBRARY_OUTPUT_PATH})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/libReactionReconstruction_rdict.pcm ${CMAKE_CURRENT_BINARY_DIR}/src/libReactionReconstruction.rootmap DESTINATION ${LIBRARY_OUTPUT_PATH})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/libCalibration_rdict.pcm ${CMAKE_CURRENT_BINARY_DIR}/src/libCalibration.rootmap DESTINATION ${LIBRARY_OUTPUT_PATH})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/libIdentification_rdict.pcm ${CMAKE_CURRENT_BINARY_DIR}/src/libIdentification.rootmap DESTINATION ${LIBRARY_OUTPUT_PATH})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/libVamosIdentification_rdict.pcm ${CMAKE_CURRENT_BINARY_DIR}/src/libVamosIdentification.rootmap DESTINATION ${LIBRARY_OUTPUT_PATH})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/libMugastIdentification_rdict.pcm ${CMAKE_CURRENT_BINARY_DIR}/src/libMugastIdentification.rootmap DESTINATION ${LIBRARY_OUTPUT_PATH})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/libAgataProcessing_rdict.pcm ${CMAKE_CURRENT_BINARY_DIR}/src/libAgataProcessing.rootmap DESTINATION ${LIBRARY_OUTPUT_PATH})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/libSelector_rdict.pcm ${CMAKE_CURRENT_BINARY_DIR}/src/libSelector.rootmap DESTINATION ${LIBRARY_OUTPUT_PATH})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/libAnalysis_rdict.pcm ${CMAKE_CURRENT_BINARY_DIR}/src/libAnalysis.rootmap DESTINATION ${LIBRARY_OUTPUT_PATH})
